--- a/layout/package.json
+++ b/layout/package.json
@@ -2,14 +2,19 @@
 	"name": "layout",
 	"private": true,
 	"version": "0.0.0",
+	"homepage": "/subdir/",
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.8.2",
+		"@emotion/styled": "^11.8.1",
+		"@mui/material": "^5.5.1",
 		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react-dom": "^17.0.2",
+		"react-router-dom": "^6.2.2"
 	},
 	"devDependencies": {
 		"@vitejs/plugin-react": "^1.0.7",
