--- a/sql-grader/frontend/package.json
+++ b/sql-grader/frontend/package.json
@@ -16,6 +16,7 @@
 		"@mui/material": "^5.12.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.10.0",
 		"tss-react": "^4.8.2"
 	},
 	"devDependencies": {
