--- a/sql-grader/frontend/package.json
+++ b/sql-grader/frontend/package.json
@@ -15,6 +15,7 @@
 		"@mui/icons-material": "^5.11.16",
 		"@mui/material": "^5.12.1",
 		"axios": "^1.3.5",
+		"date-fns": "^2.29.3",
 		"firebase": "^9.20.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
