--- a/sql-grader/frontend/package.json
+++ b/sql-grader/frontend/package.json
@@ -17,16 +17,23 @@
 		"axios": "^1.3.5",
 		"date-fns": "^2.29.3",
 		"firebase": "^9.20.0",
+		"re-resizable": "^6.9.9",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-resize-observer": "^1.1.1",
 		"react-router-dom": "^6.10.0",
-		"tss-react": "^4.8.2"
+		"react-toastify": "^9.1.2",
+		"tss-react": "^4.8.2",
+		"xterm": "^4.3.0-beta9",
+		"xterm-addon-fit": "^0.5.0",
+		"xterm-for-react": "^1.0.4"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
 		"@vitejs/plugin-react": "^3.1.0",
 		"prettier": "^2.8.7",
+		"sass": "^1.62.0",
 		"typescript": "^4.9.3",
 		"vite": "^4.2.0"
 	}
