--- a/sql-grader/frontend/package.json
+++ b/sql-grader/frontend/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"build": "tsc && vite build",
+		"build": "vite build",
 		"preview": "vite preview",
 		"prettier": "prettier --write ."
 	},
@@ -25,8 +25,7 @@
 		"react-toastify": "^9.1.2",
 		"tss-react": "^4.8.2",
 		"xterm": "^4.3.0-beta9",
-		"xterm-addon-fit": "^0.5.0",
-		"xterm-for-react": "^1.0.4"
+		"xterm-addon-fit": "^0.5.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.28",
