--- a/iotworkshop/iottemperature/package.json
+++ b/iotworkshop/iottemperature/package.json
@@ -11,8 +11,11 @@
 		"prettier": "prettier --write ."
 	},
 	"dependencies": {
+		"axios": "^1.3.6",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.10.0",
+		"recharts": "^2.5.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.28",
@@ -26,5 +29,10 @@
 		"prettier": "^2.8.8",
 		"typescript": "^5.0.2",
 		"vite": "^4.3.2"
+	},
+	"eslintConfig": {
+		"rules": {
+			"jsx-a11y/accessible-emoji": "off"
+		}
 	}
 }
