Get Date, Event, Now Playing

--- a/cshackathon2023/backend/resources/data/events.yaml
+++ b/cshackathon2023/backend/resources/data/events.yaml
@@ -8,3 +8,6 @@ events:
   - name: Hackathon event
     start_time: 2023-05-26T13:00:00.000Z
     end_time: 2023-05-26T14:00:00.000Z
+  - name: Hackathon is ended
+    start_time: 2023-05-27T23:50:00.000Z
+    end_time: 2023-06-30T23:59:59.000Z
