--- a/cshackathon2023/frontend/package.json
+++ b/cshackathon2023/frontend/package.json
@@ -18,6 +18,7 @@
     "@mui/x-date-pickers": "^6.5.0",
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
+    "firebase": "^9.22.1",
     "immer": "^10.0.2",
     "jotai": "^2.1.0",
     "react": "^18.2.0",
